# namalab24

./: .gitignore
master/company_analysis/: .gitignore  README.md
master/company_analysis/edinet_yuho_fetcher/: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
master/company_analysis/edinet_yuho_fetcher/code/: DocumentAcquisitionApi.py  DocumentListApi.py  main.py
